--- a/.github/workflows/unit-testing.yaml
+++ b/.github/workflows/unit-testing.yaml
@@ -1,6 +1,6 @@
 # Build the gtest Hector and run it
 
-name: googletest Hector
+name: Hector unit tests
 
 # Controls when the action will run.
 on:
@@ -30,10 +30,9 @@ jobs:
       - name: Install Boost
         run: sudo apt install libboost-filesystem-dev libboost-system-dev
       - name: build and run
+      # Don't really need to define BOOSTROOT and GTROOT, as these are the defaults
         run: |
-          ver=`awk '/define.*BOOST_LIB_VERSION/ {print $3}' /usr/include/boost/version.hpp`
-          echo Boost version $ver
-          GTLIB=/usr/local/lib
-          GTINC=/usr/local/include
-          BOOSTROOT=/usr/local/ 
-          make test
+          BOOSTROOT=/usr/local/
+          GTROOT=/usr/local/
+          make testing
+          ./src/Testing/hector-unit-tests
