--- a/src/testing/Makefile
+++ b/src/testing/Makefile
@@ -3,25 +3,21 @@
 ## This (SRCS) will include testing_main.cpp
 SRCS	= $(wildcard *.cpp)
 
-## temporary
-## the following files aren't working yet
+## ** TEMPORARY **
+## the following files aren't working yet; remove them
 UNDONE = test_core.cpp test_csv_file_reader.cpp test_dependency_finder.cpp test_ini_to_core_reader.cpp
 SRCS := $(filter-out $(UNDONE), $(SRCS))
-## temporary
-
-CXXSRCS := $(filter-out $(MAINS), $(CXXSRCS))
 
 OBJS	= $(SRCS:.cpp=.o)
 DEPS	= $(SRCS:.cpp=.d)
-
--include $(DEPS)
-
 LDFLAGS += -L$(GTLIB) -Wl,-L$(GTLIB),-L../
 
 ## ----------------------------------------------------
 ## Default target
 hector-unit-tests: $(OBJS) ../libhector.a
 	$(CXX) $(LDFLAGS) -o hector-unit-tests $(OBJS) ../libhector.a -lhector -lgtest -lpthread -lm -lboost_system -lboost_filesystem
+
+.PHONY: clean chkvar
 	
 clean:
 	-rm *.o
