--- a/.github/workflows/unit-testing.yaml
+++ b/.github/workflows/unit-testing.yaml
@@ -9,7 +9,7 @@ on:
       - master
       - github_actions
   pull_request:
-    branches: master
+    branches: master land_tracking
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
