--- a/.github/workflows/unit-testing.yaml
+++ b/.github/workflows/unit-testing.yaml
@@ -9,10 +9,7 @@ on:
       - master
       - github_actions
   pull_request:
-    branches: 
-        - master 
-        - land_tracking
-        - makefile
+    branches: master
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
