--- a/.github/workflows/unit-testing.yaml
+++ b/.github/workflows/unit-testing.yaml
@@ -1,6 +1,6 @@
 # Build the gtest Hector and run it
 
-name: Hector unit tests
+name: C++ unit tests
 
 # Controls when the action will run.
 on:
@@ -30,7 +30,7 @@ jobs:
       - name: Install Boost
         run: sudo apt install libboost-filesystem-dev libboost-system-dev
       - name: build and run
-      # Don't really need to define BOOSTROOT and GTROOT, as these are the defaults
+      # NB we don't really need to define BOOSTROOT and GTROOT; these are the defaults
         run: |
           BOOSTROOT=/usr/local/
           GTROOT=/usr/local/
