--- a/.github/workflows/command-line.yaml
+++ b/.github/workflows/command-line.yaml
@@ -10,7 +10,9 @@ on:
       - master
       - github_actions
   pull_request:
-    branches: master land_tracking
+    branches:
+      - master
+      - land_tracking
   schedule:
     # * is a special character in YAML so you have to quote this string
     # Launch run at 6am the 1st of every month.
