--- a/inst/input/hector_rcp45.ini
+++ b/inst/input/hector_rcp45.ini
@@ -31,7 +31,7 @@ tid=200000000       	; 2.0e8 intermediate-deep exchange, m3/s
 
 ; If using biomes (e.g. boreal.veg_c) must have data for all pools*biomes
 atmos_c=588.071			; Pg C in CO2, from Murakami et al. (2010)
-C0=277.15			; preindustrial CO2 from table 7.SM.1
+C0=277.15			; preindustrial CO2 from table 7.SM.1 IPCC AR6 
 ;boreal.veg_c=100		; e.g.
 ;tropical.veg_c=450		
 veg_c=550			; vegetation, Pg C
@@ -78,17 +78,16 @@ Ftalbedo[1950]=-0.2
 
 ;------------------------------------------------------------------------
 [carbon-cycle-solver]
-eps_abs=1.0e-6		; solution tolerances
-eps_rel=1.0e-6
+eps_abs=1.0e-6		; solution tolerance
+eps_rel=1.0e-6		; solution tolerance
 dt=0.25			; default time step
 eps_spinup=0.001	; spinup tolerance (drift), Pg C
 
 ;------------------------------------------------------------------------
 [so2]
-S0=53841.2 			; historical sulphate from year 2000 (Gg)
 SN=42000			; natural sulfur emissions (Gg)
 SO2_emissions=csv:emissions/RCP45_emissions.csv 	; emissions time series
-SV=csv:emissions/volcanic_RF.csv   				; volcanic radiative forcing time series
+SV=csv:emissions/volcanic_RF.csv   			; volcanic radiative forcing time series
 
 ;------------------------------------------------------------------------
 [CH4]
@@ -122,7 +121,7 @@ NMVOC_emissions=csv:emissions/RCP45_emissions.csv 	; emissions time series
 [N2O]
 N0=273.87 		; (ppb) preindustrial nitrous oxide from IPCC AR6 table 7.SM.1
 UC_N2O=4.8		; TgN/ppbv unit conversion between emissions and concentrations
-TN2O0=132               ; initial lifetime of N2O, years --  KALYN how is that different than the life time 
+TN2O0=132               ; initial lifetime of N2O, years 
 
 ; An example of setting a time series by individual values
 ; The model will interpolate as necessary between them
@@ -147,6 +146,11 @@ rho_oc=-.00621          ; (W yr m–2 C Tg–1) IPCC AR6 radiative efficiency OC
 rho_so2=-.00000724      ; (W yr m–2 S Gg-1) IPCC AR6 radiative efficiency SO2 (7.SM.1.3.1 of IPCC AR6)
 rho_nh3=-.00208         ; (W yr m–2 NH3Tg–1) IPCC AR6 radiative efficiency NH3 (7.SM.1.3.1 of IPCC AR6)
 
+; Miscellaneous radiative forcings default set to 0, or read in from a input table, may be used to read in 
+; additional forcings not modeled by Hector (i.e. solar, bc on snow, contrails ect.)
+Fmisc[1755] = 0		; default set to 0 
+
+
 ;------------------------------------------------------------------------
 [temperature]
 enabled=1
@@ -155,7 +159,7 @@ S=3.0 			; equilibrium climate sensitivity for 2xCO2, degC
 diff=2.3		; ocean heat diffusivity, cm2/s
 alpha=1.0     		; scaling factor for aerosol forcing
 volscl=1.0    		; scaling factor for volcanic forcing
-qco2=3.75     		; 
+qco2=3.75     		; 2×CO2 RF (7.3.2 of IPCC AR6)
 
 ; Optional global temperature constraint
 ; If supplied, the model will use these data, ignoring what it calculates
