--- a/.github/workflows/command-line.yaml
+++ b/.github/workflows/command-line.yaml
@@ -36,6 +36,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: build and run
         run: |
-          sudo apt install libboost-filesystem-dev libboost-system-dev
+          #sudo apt install libboost-filesystem-dev libboost-system-dev
+          g++ --version
           make hector
           bash ./test_hector.sh ./src/hector
