--- a/inst/input/hector_ssp585.ini
+++ b/inst/input/hector_ssp585.ini
@@ -1,22 +1,22 @@
-; Config file for hector model: ssp585
+; Configuration file for hector model: ssp585
 ;------------------------------------------------------------------------
 [core]
 run_name=ssp585
 startDate=1745
 endDate=2300
 trackingDate=9999	; year to start tracking (only carbon currently)
-do_spinup=1		; if 1, spin up model before running (default=1)
+do_spinup=1			; if 1, spin up model before running (default=1)
 max_spinup=2000		; maximum steps allowed for spinup (default=2000)
 
 ;------------------------------------------------------------------------
 [ocean]
-enabled=1		; putting 'enabled=0' will disable any component
+enabled=1			; putting 'enabled=0' will disable any component
 spinup_chem=0		; run surface chemistry during spinup phase?
 
-tt=72000000         	; 7.2e7 thermohaline circulation, m3/s
-tu=49000000         	; 4.9e7 high latitude overturning, m3/s
-twi=12500000        	; 1.25e7 warm-intermediate exchange, m3/s
-tid=200000000       	; 2.0e8 intermediate-deep exchange, m3/s
+tt=72000000			; 7.2e7 thermohaline circulation, m3/s
+tu=49000000			; 4.9e7 high latitude overturning, m3/s
+twi=12500000		; 1.25e7 warm-intermediate exchange, m3/s
+tid=200000000		; 2.0e8 intermediate-deep exchange, m3/s
 
 preind_surface_c=900		; surface ocean C, IPCC AR6 Figure 5.12
 preind_interdeep_c=37100	; intermediate and deep ocean C, IPCC AR6 Figure 5.12
@@ -28,47 +28,67 @@ preind_interdeep_c=37100	; intermediate and deep ocean C, IPCC AR6 Figure 5.12
 ; 1987, 10.1111/j.1600-0889.1987.tb00278.x) and modeled (e.g. Ricciuto 2008,
 ; 10.1029/2006GB002908; Murakami 2010, 10.1007/s00704-009-0232-8) values.
 
-; If using biomes (e.g. boreal.veg_c), this file must have entries for
+; If using biomes (e.g. separating permafrost and non-permafrost regions, as
+; in the commented-out lines below), biome-specific entries must be given for
 ; - all carbon pools
 ; - the nppv, nppd, and litterd partitioning parameters
 ; - beta and q10_rh
 
-atmos_co2=590.33		; initial atmospheric carbon pool Pg C of CO2 size used in spin up, consistent with C0
-C0=277.15			; preindustrial CO2 from table 7.SM.1 IPCC AR6, CO2 radiative forcing question is calibrated to this value
-npp_flux0=56.2			; preindustrial net primary production, Pg C/yr from Ito et al. 2011
+atmos_co2=590.33	; initial atmospheric carbon pool Pg C of CO2 size used in spin up, consistent with C0
+C0=277.15			; preindustrial CO2 from table 7.SM.1 IPCC AR6; CO2 radiative forcing is calibrated to this value
+npp_flux0=56.2		; preindustrial net primary production, Pg C/yr from Ito et al. 2011
+;pf.npp_flux0=5.6	; cf. Figure 3 in Chen et al. 2017 10.1088/1748-9326/aa8978 
+;nonpf.npp_flux0=50.6
 
 veg_c=550			; initial vegetation pool, Pg C
-detritus_c=55			; initial detritus pool, Pg C
-soil_c=1782   			; initial soil pool, Pg C
-;boreal.veg_c=100		
-;boreal.detritus_c=15
-;boreal.soil_c=1200
-;boreal.permafrost_c=865
-;boreal.npp_flux0=5.0
-;tropical.veg_c=450
-;tropical.detritus_c=45
-;tropical.soil_c=578
-;tropical.permafrost_c=0
-;tropical.npp_flux0=45.0
+detritus_c=55		; initial detritus pool, Pg C
+soil_c=917   		; initial soil pool, Pg C
+;pf.veg_c=55
+;pf.detritus_c=5
+;pf.soil_c=308
+;nonpf.veg_c=495
+;nonpf.detritus_c=50
+;nonpf.soil_c=609
 
-; Permafrost is inactive (zero) by default in Hector v3
+; Permafrost is active by default in Hector v3
 ; See Woodard et al. 2021, 10.5194/gmd-14-4751-2021
-permafrost_c=0	; permafrost, Pg C
-;fpf_static=0.74		; fraction of permafrost that is static (non-labile)
+permafrost_c=865	; permafrost, Pg C
+;pf.permafrost_c=865
+;nonpf.permafrost_c=0
+
+;fpf_static=0.74	; fraction of permafrost that is static (non-labile)
 ;rh_ch4_frac=0.023	; fraction of thawed permafrost decomposed as CH4
 ;pf_mu=1.67			; permafrost thaw parameter; see Woodard et al. 2021
 ;pf_sigma=0.986		; permafrost thaw parameter; see Woodard et al. 2021
 
 ; Partitioning parameters
 f_nppv=0.35			; Fraction of NPP to vegetation
+;pf.f_nppv=0.35
+;nonpf.f_nppv=0.35
 f_nppd=0.60			; Fraction of NPP to detritus (balance to soil)
-f_litterd=0.98	; Fraction of litter flux to detritus (balance to soil)
+;pf.f_nppd=0.60
+;nonpf.f_nppd=0.60
+f_litterd=0.98		; Fraction of litter flux to detritus (balance to soil)
+;pf.f_litterd=0.98
+;nonpf.f_litterd=0.98
 
 ; Anthropogenic contributions: emissions, direct air carbon capture and storage, and land use change, Pg C/yr
 ffi_emissions=csv:tables/ssp585_emiss-constraints_rf.csv	
 daccs_uptake=csv:tables/ssp585_emiss-constraints_rf.csv
 luc_emissions=csv:tables/ssp585_emiss-constraints_rf.csv
 luc_uptake=csv:tables/ssp585_emiss-constraints_rf.csv
+
+; CO2 and temperature effects on the carbon cycle
+beta=0.55     		; CO2 fertilization factor (unitless), calibrated to historical observations see Dorheim et al. in prep for details
+;pf.beta=0.55
+;nonpf.beta=0.55
+q10_rh=2.2   		; Heterotrophic respiration temperature sensitivity factor (unitless), calibrated to historical observations see Dorheim et al. in prep for details
+;pf.q10_rh=2.2
+;nonpf.q10_rh=2.2
+
+; Optional biome-specific warming factors
+; Default value is 1.0 (i.e., biome warms as fast as the globe)
+;pf.warmingfactor=2	; permafrost region warms 2 degC for every 1 degC globally
 
 ; Optional atmospheric CO2 constraint, ppmv
 ; If supplied, the model will use these data, ignoring what it calculates
@@ -80,23 +100,14 @@ luc_uptake=csv:tables/ssp585_emiss-constraints_rf.csv
 ; If supplied, the model will use these data, ignoring what it calculates
 ;NBP_constrain=csv:tables/ssp585_emiss-constraints_rf.csv	                ;
 
-; CO2 and temperature effects on the carbon cycle
-; these are global values, can optionally specify biome-specific ones as above
-beta=0.55     		; CO2 fertilization factor (unitless), calibrated to historical observations see Dorheim et al. in prep for details
-q10_rh=2.2   		; Heterotrophic respiration temperature sensitivity factor (unitless), calibrated to historical observations see Dorheim et al. in prep for details
-
-; Optional biome-specific warming factors
-; by default, assume 1.0 (i.e., warms as fast as the globe)
-;boreal.warmingfactor=1.2	; i.e., biome will warm 1.2 C for every 1 C globally
-
 ; Albedo effect, in W/m2. The model assumes a constant value if nothing specified
-RF_albedo=csv:tables/ssp585_emiss-constraints_rf.csv	;
+RF_albedo=csv:tables/ssp585_emiss-constraints_rf.csv
 
 ;------------------------------------------------------------------------
 [carbon-cycle-solver]
 eps_abs=1.0e-6		; solution tolerance
 eps_rel=1.0e-6		; solution tolerance
-dt=0.25			; default time step
+dt=0.25				; default time step
 eps_spinup=0.001	; spinup tolerance (drift), Pg C
 
 ;------------------------------------------------------------------------
@@ -106,9 +117,9 @@ SV=csv:tables/ssp585_emiss-constraints_rf.csv   		; volcanic radiative forcing t
 
 ;------------------------------------------------------------------------
 [CH4]
-M0= 731.41  			; 731.41 ppb preindustrial methane IPCC AR6 Table 7.SM.1, the CH4 forcing equations is calibrated to a M0 of 731.41 ppb
+M0= 731.41  		; 731.41 ppb preindustrial methane IPCC AR6 Table 7.SM.1, the CH4 forcing equations is calibrated to a M0 of 731.41 ppb
 Tsoil=160 			; lifetime of soil sink (years)
-Tstrat=120          		; lifetime of tropospheric sink (years)
+Tstrat=120          ; lifetime of tropospheric sink (years)
 UC_CH4=2.78			; Tg(CH4)/ppb unit conversion between emissions and concentrations
 CH4N=338			; Natural CH4 emissions (Tgrams)
 CH4_emissions=csv:tables/ssp585_emiss-constraints_rf.csv     ; emissions time series
@@ -122,13 +133,13 @@ NMVOC_emissions=csv:tables/ssp585_emiss-constraints_rf.csv   ; emissions time se
 
 TOH0=6.6			; inital OH lifetime (years)
 CNOX=0.0042			; coefficent for NOX
-CCO=-0.000105			; coefficent for CO
-CNMVOC=-0.000315		; coefficent for NMVOC (non methane VOC)
+CCO=-0.000105		; coefficent for CO
+CNMVOC=-0.000315	; coefficent for NMVOC (non methane VOC)
 CCH4=-0.32			; coefficent for CH4
 
 ;------------------------------------------------------------------------
 [ozone]
-PO3=30.0 					; preindustrial O3 concentration
+PO3=30.0 			; preindustrial O3 concentration
 NOX_emissions=csv:tables/ssp585_emiss-constraints_rf.csv  	; emissions time series
 CO_emissions=csv:tables/ssp585_emiss-constraints_rf.csv		; emissions time series
 NMVOC_emissions=csv:tables/ssp585_emiss-constraints_rf.csv 	; emissions time series
@@ -150,7 +161,6 @@ N2O_emissions=csv:tables/ssp585_emiss-constraints_rf.csv   ; emissions time seri
 baseyear=1750		; when to start reporting; by definition, all F=0 in this year
 
 ; Optional radiative forcing constraint
-; If supplied, the model will use these data, ignoring what it calculates
 ;RF_tot_constrain=csv:tables/CONSTRAINT.csv
 delta_co2=0.05		; (unitless) forcing tropospheric adjustments for CO2 (7.3.2.1 of IPCC AR6)
 delta_ch4=-.14		; (unitless) forcing tropospheric adjustments for CH4 (7.3.2.2 of IPCC AR6)
@@ -160,22 +170,18 @@ rho_oc=-.00621          ; (W yr m–2 C Tg–1) IPCC AR6 radiative efficiency OC
 rho_so2=-.00000724      ; (W yr m–2 S Gg-1) IPCC AR6 radiative efficiency SO2 (7.SM.1.3.1 of IPCC AR6)
 rho_nh3=-.00208         ; (W yr m–2 NH3Tg–1) IPCC AR6 radiative efficiency NH3 (7.SM.1.3.1 of IPCC AR6)
 
-; Miscellaneous radiative forcings default set to 0, or read in from a input table, may be used to read in
-; additional forcings not modeled by Hector (i.e. solar, bc on snow , contrails from)
-;RF_misc=csv:tables/ssp585_emiss-constraints_rf.csv		;
+; Miscellaneous radiative forcings are by default zero, but can read in from a input table to
+; represent additional forcings not modeled by Hector (e.g. solar, bc on snow, jet contrails)
+;RF_misc=csv:tables/ssp585_emiss-constraints_rf.csv
 RF_misc[1750]=0
-
-
 
 ;------------------------------------------------------------------------
 [temperature]
-enabled=1
-
 S=3.0 			; equilibrium climate sensitivity for 2xCO2 degC (A.4.4 of IPCC AR6)
 diff=1.16		; ocean heat diffusivity, cm2/s calibrated to historical observations see Dorheim et al. in prep for details
-alpha=1.0     		; uncertainty scaling factor for aerosol forcing
-volscl=1.0    		; uncertainty scaling factor for volcanic forcing
-qco2=3.75     		; 2×CO2 RF (7.3.2 of IPCC AR6)
+alpha=1.0     	; uncertainty scaling factor for aerosol forcing
+volscl=1.0    	; uncertainty scaling factor for volcanic forcing
+qco2=3.75     	; 2×CO2 RF (7.3.2 of IPCC AR6)
 
 ; Optional global temperature constraint
 ; If supplied, the model will use these data, ignoring what it calculates
