--- a/inst/input/hector_ssp434.ini
+++ b/inst/input/hector_ssp434.ini
@@ -138,6 +138,8 @@ CNOX=0.0042			; coefficent for NOX
 CCO=-0.000105		; coefficent for CO
 CNMVOC=-0.000315	; coefficent for NMVOC (non methane VOC)
 CCH4=-0.32			; coefficent for CH4
+CH2=-0.00044625 ; coefficent for H2
+
 
 ;------------------------------------------------------------------------
 [ozone]
