--- a/.github/workflows/unit-testing.yaml
+++ b/.github/workflows/unit-testing.yaml
@@ -2,34 +2,56 @@
 
 name: C++ unit tests
 
-# Controls when the action will run.
 on:
   pull_request:
     branches:
       - '**' # matches every branch
 
-  # Allows you to run this workflow manually from the Actions tab
+  # Manual trigger with optional inputs
   workflow_dispatch:
+    inputs:
+      build_type:
+        description: 'Build type (e.g., Debug or Release)'
+        required: false
+        default: 'Release'
+      verbose_logs:
+        description: 'Enable verbose logging? (true/false)'
+        required: false
+        default: 'false'
+
+  # Scheduled run on the first of every month at 00:00 UTC
+  schedule:
+    - cron: '0 0 1 * *'
 
 jobs:
-  # This workflow contains one job that builds hector on ubuntu using the
-  # googletest framework.
   ubuntu:
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    if: github.ref == 'refs/heads/main' || github.event_name != 'schedule'
+
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+
       - name: Install gtest
-      # based on https://github.com/bastianhjaeger/github_actions_gtest_example
         run: sudo apt-get install libgtest-dev && cd /usr/src/gtest && sudo cmake CMakeLists.txt && sudo make && sudo cp lib/*.a /usr/local/lib
+
       - name: Install Boost
         run: sudo apt install libboost-filesystem-dev libboost-system-dev
-      - name: build and run
-      # NB we don't really need to define BOOSTROOT and GTROOT; these are the defaults
+
+      - name: Build and run tests
         run: |
+          set -e
           BOOSTROOT=/usr/local/
           GTROOT=/usr/local/
-          make testing
+          BUILD_TYPE=${{ github.event.inputs.build_type }}
+          VERBOSE=${{ github.event.inputs.verbose_logs }}
+
+          echo "Build Type: $BUILD_TYPE"
+          if [ "$VERBOSE" == "true" ]; then
+            echo "Running in verbose mode..."
+            make VERBOSE=1 testing
+          else
+            make testing
+          fi
+
           ./src/unit-testing/hector-unit-tests
